--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
+/.env.local
 # testing
 /coverage
 
@@ -19,6 +19,7 @@
 
 # production
 /build
+
 
 # misc
 .DS_Store
